add tracking of extension id for automation apps and device handlers. refactor automation app service and device service so that they use the same strategy for loading apps and device handlers. register listener for automation app and device with extension service.